# ghostcrab-personal-mcp

./: .env.example  .gitignore  .gitmodules  .prettierignore  INSTALL.md  Makefile  NPMJS_readme.md  README.md  README_2.md  README_ARCHITECTURE.md  README_CLAUDE_CODE_MCP.md  README_CODEX_MCP.md  README_CURSOR_MCP.md  README_MACOSX.md  README_template.md  ROADMAP.md  config.yaml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_all_tests_docker.sh  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
docs/: GCP_CLIENT_SETUP.md  GCP_COMMANDS.md  index.md  openapi.yaml  pg_mindbrain_migration.md  skillset-demo-import.md
ghostcrab-integrations/crewAI/ghostcrab-crewai/: README.md  pyproject.toml
ghostcrab-integrations/crewAI/ghostcrab-crewai/examples/: crew_with_mcp_tools.py
ghostcrab-integrations/crewAI/ghostcrab-crewai/ghostcrab_crewai/: __init__.py
ghostcrab-integrations/crewAI/ghostcrab-crewai/ghostcrab_crewai/mcp/: __init__.py  tools.py
ghostcrab-integrations/crewAI/ghostcrab-crewai/tests/: test_tools.py
ghostcrab-skills/: CAPABILITIES.md  GHOSTCRAB_INTEGRATION.md  MCP_TOOL_DESCRIPTION_PATCHES.md  README.md  package.json
installations/: README.md  custom-installation.md  gcp-brain-setup.md  gemini-cli.md  nous-hermes.md  openclaw.md  openfang.md  universal-mcp-client.md
scripts/: backend-build-full.sh  beta-bundle-install.mjs  build-macos.sh  compare-mcp-artifacts.ts  copy-sql.mjs  cross-build-all.sh  download-sqlite3.sh  ensure-vendor.sh  example-client-smoke.mjs  export-mcp-scenario-pack.ts  (+26 more)
(+360 files in other folders)
